[tool.poetry]
name = "lineage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
scikit-learn = "1.0.2"
seaborn = "^0.11"
svgutils = "^0.3.4"
openpyxl = "^3.0.9"
biopython = "^1.79"
networkx = "^2.6.3"
plotly = "^5.4.0"
jax = "^0.2.28"
jaxlib = "^0.1.76"
pygraphviz = "^1.7"
Sphinx = "^4.5.0"
sphinx-autoapi = "^1.8.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "lineage.figures.common:genFigure"
