[tool.poetry]
name = "lineage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.20.0"
scipy = "^1.7.0"
scikit-learn = "^1.0.2"
seaborn = "^0.12.2"
svgutils = "^0.3.4"
openpyxl = "^3.0.9"
biopython = "^1.79"
networkx = "^2.6.3"
pygraphviz = "^1.7"
Sphinx = "^4.5.0"
sphinx-autoapi = "^1.8.4"
statsmodels = "^0.13.2"
numba = "^0.56.4"
numba-scipy = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0"
mypy = "^0.990"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "lineage.figures.common:genFigure"
