[tool.poetry]
name = "lineage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
scikit-learn = "^1.2"
seaborn = "^0.12.2"
svgutils = "^0.3.4"
openpyxl = "^3.0.9"
biopython = "^1.79"
networkx = "^2.6.3"
pygraphviz = "^1.7"
Sphinx = "^4.5.0"
sphinx-autoapi = "^1.8.4"
statsmodels = "^0.13.2"
numba = "0.57.0rc1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0"
mypy = "^0.990"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "lineage.figures.common:genFigure"
